src/objects/Rate__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_on_Generation_Cost__c</fullName>
        <label>Adjustment on Generation Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_Fixed_Metering_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Fixed Metering Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Fixed_Supply_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Fixed Supply Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cross_Subsidy_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cross Subsidy Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_GHMSCI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC: GHMSCI</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_GP_Secondary_per_kW__c</fullName>
        <defaultValue>0</defaultValue>
        <description>216 V, 230 V, 400/230 V, 460/265 V</description>
        <label>DC: GP Secondary per kW</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_GP_Secondary_per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <description>216 V, 230 V, 400/230 V, 460/265 V</description>
        <label>DC: GP Secondary per kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_GP_Type_AB_per_kW__c</fullName>
        <defaultValue>0</defaultValue>
        <description>69/39 kV, 115/66 kV</description>
        <label>DC: GP Type AB per kW</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_GP_Type_AB_per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <description>69/39 kV, 115/66 kV</description>
        <label>DC: GP Type AB per kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_GP_Type_C_per_kW__c</fullName>
        <defaultValue>0</defaultValue>
        <description>34.5/19.92 kV</description>
        <label>DC: GP Type C per kW</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_GP_Type_C_per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <description>34.5/19.92 kV</description>
        <label>DC: GP Type C per kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_GP_Type_D_per_kW__c</fullName>
        <defaultValue>0</defaultValue>
        <description>13.2/7.62 kV, 13.8/7.97 kV</description>
        <label>DC: GP Type D per kW</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_GP_Type_D_per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <description>13.2/7.62 kV, 13.8/7.97 kV</description>
        <label>DC: GP Type D per kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_GP_Type_E_per_kW__c</fullName>
        <defaultValue>0</defaultValue>
        <description>4.8 kV, 6.24/3.60 kV</description>
        <label>DC: GP Type E per kW</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_GP_Type_E_per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <description>4.8 kV, 6.24/3.60 kV</description>
        <label>DC: GP Type E per kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_General_Service_B_Per_kW__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC: General Service B (Per kW)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_General_Service_B_Per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC: General Service B (Per kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Res_Gen_Service_A_201_300_Per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC: Res &amp; Gen Service A (201-300 Per kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Res_Gen_Service_A_301_400_Per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC: Res &amp; Gen Service A (301-400 Per kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Res_Gen_Service_A_401_kWh_and_Up__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC: Res &amp; Gen Service A (401 kWh and Up)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Res_Gen_Service_A_Up_to_200_Per_k__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC: Res &amp; Gen Service A (Up to 200 Per k</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUs_Stranded_Contract_Cost_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DUs Stranded Contract Cost kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_Charge__c</fullName>
        <label>Distribution Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equalization_Taxes_and_Royalties_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Equalization Taxes and Royalties kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fit_All__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fit All</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GHMSCI__c</fullName>
        <label>SLC: GHMSCI</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gen_Charge_for_TOU_GCA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gen Charge for TOU GCA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gen_Charge_for_TOU_Weekday_Offpeak_DO__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gen Charge for TOU Weekday Offpeak (DO)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gen_Charge_for_TOU_Weekday_Peak_DP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gen Charge for TOU Weekday Peak (DP)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gen_Charge_for_TOU_Weekend_Offpeak_EO__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gen Charge for TOU Weekend Offpeak (EO)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gen_Charge_for_TOU_Weekend_Peak_DP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gen Charge for TOU Weekend Peak (DP)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Service_B_Per_kW__c</fullName>
        <label>General Service B (Per kW)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Service_B_Per_kWh__c</fullName>
        <label>General Service B (Per kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generation_Charge_for_Non_TOU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Generation Charge for Non-TOU (P/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Genertion_Charge_for_Non_TOU__c</fullName>
        <label>Genertion Charge for Non-TOU (P/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifeline_Discount_0_20__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lifeline Discount (0-20)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifeline_Discount_21_50__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lifeline Discount (21-50)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifeline_Discount_51_70__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lifeline Discount (51-70)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifeline_Rate_Subsidy__c</fullName>
        <label>Lifeline Rate Subsidy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lifeline_Subsidy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lifeline Subsidy</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCPC_Gen_Service_B_Per_Cust_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MCPC: Gen Service B (Per Cust/Month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCPC_Residential_Per_Cust_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MCPC: Residential (Per Cust/Month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC_GHMSCI_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MC: GHMSCI (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC_GP_LARGE_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MC: GP LARGE (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC_GP_MEDIUM_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MC: GP MEDIUM (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC_GP_VERY_LARGE_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MC: GP VERY LARGE (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC_General_Service_B_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MC: General Service B (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC_Res_Gen_Service_A_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MC: Res &amp; Gen Service A (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC_Res_Gen_Service_A_Per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MC: Res &amp; Gen Service A (Per kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metering_Charge_Per_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Metering Charge (Per Customer)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metering_Charge__c</fullName>
        <label>Metering Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Code__c</fullName>
        <description>Returns numeric value of month for query filtering</description>
        <formula>CASE(Month__c, 
&quot;January&quot;, 1, 
&quot;February&quot;, 2, 
&quot;March&quot;, 3, 
&quot;April&quot;, 4, 
&quot;May&quot;, 5, 
&quot;June&quot;, 6, 
&quot;July&quot;, 7, 
&quot;August&quot;, 8, 
&quot;September&quot;, 9, 
&quot;October&quot;, 10, 
&quot;November&quot;, 11, 
&quot;December&quot;, 12, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPC_Stranded_Debts_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NPC Stranded Debts kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Charges__c</fullName>
        <inlineHelpText>Distribution Charge, Supply Charge, Metering Charge, 
Lifeline Discount, Other Discounts &amp; Local Franch Tax</inlineHelpText>
        <label>Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Power_Act_Reduction__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Power Act Reduction (P/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_Factor_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Power Factor Adjustment</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Month_s_Adjustment_on_Generatio__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Previous Month&apos;s Adjustment on Gen Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Res_Gen_Service_A_201_300_kWh__c</fullName>
        <label>Res &amp; Gen Service A (201-300 kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Res_Gen_Service_A_301_400_kWh__c</fullName>
        <label>Res &amp; Gen Service A (301-400 kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Res_Gen_Service_A_401_kWh_and_up__c</fullName>
        <label>Res &amp; Gen Service A (401 kWh and up)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Res_Gen_Service_A_Up_to_200_kWh__c</fullName>
        <label>Res &amp; Gen Service A (Up to 200 kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCPC_General_Service_Per_Cust_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SCPC: General Service (Per Cust/Month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCPC_Residential_Per_Cust_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SCPC: Residential (Per Cust/Month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_GHMSCI_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SC: GHMSCI (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_GP_LARGE_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SC: GP LARGE (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_GP_MEDIUM_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SC: GP MEDIUM (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_GP_VERY_LARGE_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SC: GP VERY LARGE (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_General_Service_B_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SC: General Service B (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Res_Gen_Service_A_Per_Cust_month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SC: Res &amp; Gen Service A (Per Cust/month)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Res_Gen_Service_A_Per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SC: Res &amp; Gen Service A (Per kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_GHMSCI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SLC: GHMSCI</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_GP_Secondary__c</fullName>
        <defaultValue>0</defaultValue>
        <description>216 V, 230 V, 400/230 V, 460/265 V</description>
        <label>SLC: GP Secondary</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_GP_Type_AB__c</fullName>
        <defaultValue>0</defaultValue>
        <description>69/39 kV, 115/66 kV</description>
        <label>SLC GP Type AB</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_GP_Type_C__c</fullName>
        <defaultValue>0</defaultValue>
        <description>34.5/19.92 kV</description>
        <label>SLC: GP Type C</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_GP_Type_D__c</fullName>
        <defaultValue>0</defaultValue>
        <description>13.2/7.62 kV, 13.8/7.97 kV</description>
        <label>SLC: GP Type D</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_GP_Type_E__c</fullName>
        <defaultValue>0</defaultValue>
        <description>4.8 kV, 6.24/3.60 kV</description>
        <label>SLC: GP Type E</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_General_Service_B__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SLC: General Service B</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_Res_Gen_Services_A_P_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SLC: Res &amp; Gen Services A (P/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPKI_Gen_Service_B_Per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SPKI: Gen Service B (Per kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPKI_Residential_Per_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SPKI: Residential (Per kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Senior_Citizen_Discount_Household__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Senior Citizen Discount (Household)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Senior_Citizen_Discount_Institution__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Senior Citizen Discount (Institution)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Senior_Citizen_Subsidy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Senior Citizen Subsidy (P/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Discount_5_kW__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Special Discount (≤5 kW)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Discount_M5_kW__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Special Discount (&gt;5 kW)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supply_Charge_Per_Customer__c</fullName>
        <label>Supply Charge (Per Customer)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supply_Charge__c</fullName>
        <label>Supply Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supply_per_kWh_Incremental__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Supply per kWh Incremental</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Loss_Charge__c</fullName>
        <label>System Loss Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_GHMS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TC: GHMS</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_GP_Secondary__c</fullName>
        <defaultValue>0</defaultValue>
        <description>216 V, 230 V, 400/230 V, 460/265 V</description>
        <label>TC: GP Secondary</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_GP_Type_AB__c</fullName>
        <defaultValue>0</defaultValue>
        <description>69/39 kV, 115/66 kV</description>
        <label>TC: GP Type AB</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_GP_Type_C__c</fullName>
        <defaultValue>0</defaultValue>
        <description>34.5/19.92 kV</description>
        <label>TC: GP Type C</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_GP_Type_D__c</fullName>
        <defaultValue>0</defaultValue>
        <description>13.2/7.62 kV, 13.8/7.97 kV</description>
        <label>TC: GP Type D</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_GP_Type_E__c</fullName>
        <defaultValue>0</defaultValue>
        <description>4.8 kV, 6.24/3.60 kV</description>
        <label>TC: GP Type E</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_General_Service_B__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TC: General Service B</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_Ratio__c</fullName>
        <label>TC: Ratio</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_Residential_General_Service_A__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TC: Residential &amp; General Service A</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_Transmission_Charge_VATable__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TC: Transmission Charge VATable</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TC_Transmission_Charge_non_VAT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TC: Transmission Charge non-VAT</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TOU_Coverage_End_Date__c</fullName>
        <label>TOU Coverage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TOU_Coverage_Start_Date__c</fullName>
        <label>TOU Coverage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transmission_Charge_VATable__c</fullName>
        <label>Transmission Charge (VATable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Transmission_Charge__c</fullName>
        <label>Transmission Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Universal_Charge_Environmental_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Universal Charge - Environmental Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Universal_Charge_Missionary_Electrific__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Universal Charge - Missionary Electrific</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Universal_Charge_Stranded_Contract_Cos__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is NPC Stranded Contract Cost kWh</description>
        <label>Universal Charge - Stranded Contract Cos</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Adjustment_on_Generation_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Adjustment on Generation Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Generation_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Generation Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Lifeline_Rate_Subsidy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lifeline Rate Subsidy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Other_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Distribution Charge, Supply Charge, Metering Charge, 
Lifeline Discount, Other Discounts &amp; Local Franch Tax</inlineHelpText>
        <label>Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Power_Act_Reduction__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Power Act Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_System_Loss_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>System Loss Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Transmission_Charge_VATable__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transmission Charge (VATable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Value_Added_Tax__c</fullName>
        <label>Value-Added Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Rate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RT{0000000000}</displayFormat>
        <label>Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Allow_MERALCO_Admins_only_to_update</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
        <errorMessage>Only System Administrators are allowed to edit this record.</errorMessage>
    </validationRules>
</CustomObject>